unpackaged/main/default/objects/Fund_Distribution__c/Fund_Distribution__c.object-meta.xml
<CustomObject>
    <description>To capture the total amount the fund will distribute, which in turn will be split into multiple investor distributions</description>
    <label>Fund Distribution</label>
    <nameField>
        <displayFormat>FD-{0000}</displayFormat>
        <label>FD No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>