unpackaged/main/default/objects/Fund_Distribution__c/fields/Capital_Return__c.field-meta.xml
<CustomField>
    <fullName>Capital_Return__c</fullName>
    <label>Capital Return</label>
    <summarizedField>Investor_Distribution__c.Capital_Return__c</summarizedField>
    <summaryForeignKey>Investor_Distribution__c.Fund_Distribution__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>