unpackaged/main/default/objects/Fund_Distribution__c/fields/Capital_Return_Formula__c.field-meta.xml
<CustomField>
    <fullName>Capital_Return_Formula__c</fullName>
    <formula>Capital_Return__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capital Return</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>