unpackaged/main/default/objects/Fund_Distribution__c/fields/Capital_Returned_Recallable__c.field-meta.xml
<CustomField>
    <fullName>Capital_Returned_Recallable__c</fullName>
    <label>Capital Returned (Recallable)</label>
    <summarizedField>Investor_Distribution__c.Capital_Return__c</summarizedField>
    <summaryFilterItems>
        <field>Investor_Distribution__c.Capital_Recallable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Investor_Distribution__c.Fund_Distribution__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>