unpackaged/main/default/objects/Fund_Distribution__c/fields/Capital_Returned_Recallable_Formula__c.field-meta.xml
<CustomField>
    <fullName>Capital_Returned_Recallable_Formula__c</fullName>
    <formula>Capital_Returned_Recallable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capital Returned (Recallable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>