unpackaged/main/default/objects/Fund_Distribution__c/fields/Distribution_Date__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Date__c</fullName>
    <inlineHelpText>Warning: If you edit this field Investor Distribution(s) linked with this Fund Distribution will not reflect the change.</inlineHelpText>
    <label>Distribution Date</label>
    <type>Date</type>
</CustomField>