unpackaged/main/default/objects/Fund_Distribution__c/fields/Dividends__c.field-meta.xml
<CustomField>
    <fullName>Dividends__c</fullName>
    <label>Dividends</label>
    <summarizedField>Investor_Distribution__c.Dividends__c</summarizedField>
    <summaryForeignKey>Investor_Distribution__c.Fund_Distribution__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>