unpackaged/main/default/objects/Fund_Distribution__c/fields/Dividends_Formula__c.field-meta.xml
<CustomField>
    <fullName>Dividends_Formula__c</fullName>
    <formula>Dividends__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dividends</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>