unpackaged/main/default/objects/Fund_Distribution__c/fields/Other_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Other_Proceeds__c</fullName>
    <label>Other Proceeds</label>
    <summarizedField>Investor_Distribution__c.Other_Proceeds__c</summarizedField>
    <summaryForeignKey>Investor_Distribution__c.Fund_Distribution__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>