unpackaged/main/default/objects/Fund_Distribution__c/fields/Other_Proceeds_Formula__c.field-meta.xml
<CustomField>
    <fullName>Other_Proceeds_Formula__c</fullName>
    <formula>Other_Proceeds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Proceeds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>