unpackaged/main/default/objects/Fund_Distribution__c/fields/Realized_Gain__c.field-meta.xml
<CustomField>
    <fullName>Realized_Gain__c</fullName>
    <label>Realized Gain</label>
    <summarizedField>Investor_Distribution__c.Realized_Gain__c</summarizedField>
    <summaryForeignKey>Investor_Distribution__c.Fund_Distribution__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>