unpackaged/main/default/objects/Fund_Distribution__c/fields/Realized_Gain_Formula__c.field-meta.xml
<CustomField>
    <fullName>Realized_Gain_Formula__c</fullName>
    <formula>Realized_Gain__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Realized Gain</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>