unpackaged/main/default/objects/Fund_Distribution__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fund_Name__c</columns>
    <columns>Capital_Returned_Recallable__c</columns>
    <columns>Total_Distributions__c</columns>
    <columns>Distribution_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>